[package]
name = "udev-video-broker"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
akri-shared = { path = "../../../shared" }
env_logger = "0.11.8"
lazy_static = "1.4"
log = "0.4.3"
prometheus = { version = "0.12.0", features = ["process"] }
prost = "0.12"
regex = "1"
tokio = { version = "1.0.1", features = ["time", "fs", "macros", "signal"] }
tonic = "0.10"
rscam = "0.5.5"

[build-dependencies]
tonic-build = "0.10"
