[package]
name = "webhook-configuration"
version = "0.12.20"
license = "Apache-2.0"
authors = ["DazWilkin <daz.wilkin@gmail.com>"]
edition = "2021"
rust-version = "1.73.0"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
akri-shared = { path = "../../../shared" }
clap = "4.2.2"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["schemars", "v1_23"] }
openapi = { git = "https://github.com/DazWilkin/openapi-admission-v1", tag = "v1.1.0" }
openssl = "0.10"
serde_json = "1.0.61"

[dev-dependencies]
actix-rt = "2.2.0"
kube = { version = "0.80.0",  features = ["derive"] }

