[package]
name = "webhook-configuration"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = { version = "4.9", features = ["openssl"] }
akri-shared = { path = "../../../shared" }
clap = "4.2.2"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["schemars", "v1_23"] }
openapi = { git = "https://github.com/DazWilkin/openapi-admission-v1", tag = "v1.1.0" }
openssl = "0.10"
serde_json = "1.0.61"

[dev-dependencies]
actix-rt = "2.2.0"
kube = { version = "0.80.0",  features = ["derive"] }

